--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ chromadb==0.3.29
 pypdf==3.12.2
 streamlit==1.24.1
 tiktoken==0.4.0
-pytesseract
-Pillow
-python-docx
+pytesseract==0.3.10
+Pillow==9.5.0
+python-docx==0.8.11
