--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ langchain==0.0.234
 openai==0.27.8
 chromadb==0.3.29
 pypdf==3.12.2
-streamlit==1.24.1
-tiktoken==0.4.0
-pytesseract==0.3.10
-Pillow==9.5.0
-python-docx==0.8.11
+streamlit
+tiktoken
+pytesseract
+Pillow
+python-docx
