--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-tiktoken>=0.5.2
-Pillow>=9.0.0
-langchain
-openai
-pytesseract
-python-docx
-streamlit
-PyPDF2
-chardet
+streamlit>=1.41.1
+langchain>=0.0.306
+sentence-transformers>=2.2.2
+openai>=0.27.2
+pytesseract>=0.3.10
+python-docx>=0.8.11
+Pillow>=9.4.0
+pandas>=1.3.0
+chromadb>=0.3.23
